[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Fonts/Epilepsy Sans/Resource/EpilepsySansBold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/Themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/SpecialOptionsMenu/SpecialOptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://Resources/Fonts/Epilepsy Sans/Resource/EpilepsySansOutlined.tres" type="DynamicFont" id=4]

[node name="SpecialOptionsMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="MainMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainMarginContainer"]
margin_right = 530.0
margin_bottom = 320.0
color = Color( 0.0941176, 0.0784314, 0.168627, 0.368627 )

[node name="MarginContainer" type="MarginContainer" parent="MainMarginContainer"]
margin_right = 530.0
margin_bottom = 206.0
size_flags_vertical = 0
custom_constants/margin_top = 60

[node name="ContentVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer"]
margin_top = 60.0
margin_right = 530.0
margin_bottom = 206.0
custom_constants/separation = 30

[node name="Header" type="Label" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer"]
margin_left = 220.0
margin_right = 310.0
margin_bottom = 26.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Особые"
align = 1

[node name="MenuVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer"]
margin_left = 181.0
margin_top = 56.0
margin_right = 349.0
margin_bottom = 146.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource( 2 )
custom_constants/separation = 15

[node name="OptionsVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer"]
margin_right = 168.0
margin_bottom = 61.0
custom_constants/separation = 15

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer/OptionsVBoxContainer"]
margin_right = 168.0
margin_bottom = 32.0

[node name="DeleteAllSavesButton" type="Button" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer/OptionsVBoxContainer/ButtonsVBoxContainer"]
margin_right = 168.0
margin_bottom = 14.0
text = "Удалить все сохранения"

[node name="DeleteSystemDataButton" type="Button" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer/OptionsVBoxContainer/ButtonsVBoxContainer"]
margin_top = 18.0
margin_right = 168.0
margin_bottom = 32.0
text = "Сбросить настройки"

[node name="RadioButtonsVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer/OptionsVBoxContainer"]
margin_top = 47.0
margin_right = 168.0
margin_bottom = 61.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer/OptionsVBoxContainer/RadioButtonsVBoxContainer"]
margin_right = 168.0
margin_bottom = 14.0
custom_constants/separation = 15

[node name="DeleteAllSavesAlwaysButton" type="Label" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer/OptionsVBoxContainer/RadioButtonsVBoxContainer/HBoxContainer"]
margin_right = 142.0
margin_bottom = 13.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Автоудаление сохранений"
align = 1

[node name="CheckBox" type="CheckBox" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer/OptionsVBoxContainer/RadioButtonsVBoxContainer/HBoxContainer"]
margin_left = 157.0
margin_right = 168.0
margin_bottom = 14.0

[node name="ExitButton" type="Button" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer"]
margin_top = 76.0
margin_right = 168.0
margin_bottom = 90.0
text = "Выход"
